[package]
name = "rrd"
version = "0.0.0"
authors = ["Kirill Fomichev <fanatid@ya.ru>"]
edition = "2018"
description = "Rust Ripple daemon (Ripple node on Rust)"
readme = "README.md"
repository = "https://github.com/fanatid/ripple-rs"
license = "MIT"
publish = false

[dependencies]
clap = "2.33.0"
num_cpus = "1.13.0"
tokio = { version = "0.2", features = ["rt-threaded", "io-driver", "time"] }
# local
logj = { path = "logj" }
network = { path = "network" }

[build-dependencies]
git2 = "0.10.0" # `cc` conflict with `secp256k1`, waiting https://github.com/rust-bitcoin/rust-secp256k1/pull/204

[[bin]]
name = "rrd"
path = "rrd/main.rs"

[workspace]
members = [
    "bs58_ripple",
    "crypto",
    "logj",
    "network",
    "protocol"
]
