[package]
name = "network"
version = "0.1.0"
authors = ["Kirill Fomichev <fanatid@ya.ru>"]
edition = "2018"
publish = false

[dependencies]
base64 = "0.12.0"
byteorder = "1"
bytes = "0.5.4"
futures = "0.3"
httparse = "1.3.4"
native-tls = "0.2.4"
openssl = "0.10.29"
tokio = { version = "0.2", features = ["io-util", "tcp", "sync", "dns"] }
tokio-tls = "0.3.0"
# local
crypto = { path = "../crypto" }
log = { path = "../log" }
protocol = { path = "../protocol" }
